truned it to a flask web app

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico">
 
 
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 
     <title>About </title>
 </head>
@@ -19,8 +19,8 @@
     <nav class="navbar navbar-expand-md">
 
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">
-                <img src="assets/ladachi_logo.png" alt="company logo" width="100" height="auto" class="d-none d-sm-inline-block" >
+            <a href="/" class="navbar-brand">
+                <img src="static/assets/ladachi_logo.png" alt="company logo" width="100" height="auto" class="d-none d-sm-inline-block" >
                 <span id="company_name" class="text-center">LADACHI CLEANING SERVICES</span>
             </a>
             <!-- toggle button for mobile view -->
@@ -28,9 +28,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="services-page collapse navbar-collapse justify-content-end align-center gap-3" id="main-nav">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="services.html" class="nav-link active">Services</a>
-                <a href="#" class="nav-link active">About us</a>
+                <a href="/" class="nav-link active">Home</a>
+                <a href="/services" class="nav-link active">Services</a>
+                <a href="/about" class="nav-link active">About us</a>
             </div>
         </div>
     </nav>
@@ -46,7 +46,7 @@
                         <p>We are fully compliant and hold all the necessary licenses and certifications required to operate in the cleaning industry in Kenya. Our commitment to excellence and customer satisfaction drives us to provide top-quality cleaning solutions tailored to meet the unique needs of our clients.</p>
                     </div>
                     <div class="col-lg-6 container-fluid  ">
-                        <img src="assets/about us/cleaning supplies.jpg" alt="Cleaning Supplies" class="img-fluid rounded" id="cleaning-supplies" width="100%" height="100%">
+                        <img src="static/assets/about us/cleaning supplies.jpg" alt="Cleaning Supplies" class="img-fluid rounded" id="cleaning-supplies" width="100%" height="100%">
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -126,19 +126,19 @@
     <div class="footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-            <a href="assets/ladachi_logo.png" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1 keychainify-checked">
-                <img src="assets/ladachi_logo.png" width="30" height="24" alt="Description of your image">
+            <a href="static/assets/ladachi_logo.png" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1 keychainify-checked">
+                <img src="static/assets/ladachi_logo.png" width="30" height="24" alt="Description of your image">
             </a>
-    
+
             <span class="mb-3 mb-md-0 text-white">&copy; 2023 Lachadi cleaning services</span>
             </div>
-    
+
             <ul class="nav col-md-4  justify-content-evenly list-unstyled d-flex ">
             <li class="ms-3"><a href="https://www.facebook.com/profile.php?id=100093320472624&mibextid=LQQJ4d" class="fab fa-facebook text-white " width="24" height="24"></a></li>
             <li class="ms-3"><a href="#" class="fab fa-twitter text-white" width="24" height="24"></a></li>
             <li class="ms-3"><a href="https://instagram.com/lachadi_super_cleaners?igshid=NGVhN2U2NjQ0Yg==" class="fab fa-instagram text-white" width="24" height="24"></a></li>
             </ul>
-    
+
         </footer>
         </div>
         <div id="backtopbtn">
@@ -147,6 +147,6 @@
         </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
