--- a/templates/services.html
+++ b/templates/services.html
@@ -11,18 +11,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico">
 
 
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-md">
 
         <div class="container-fluid">
             <a href="services.html" class="navbar-brand">
-                <img src="assets/ladachi_logo.png" alt="company logo" width="100" height="auto" class="d-none d-sm-inline-block" >
+                <img src="static/assets/ladachi_logo.png" alt="company logo" width="100" height="auto" class="d-none d-sm-inline-block" >
                 <span id="company_name" class="text-center">LADACHI CLEANING SERVICES</span>
             </a>
             <!-- toggle button for mobile view -->
@@ -30,14 +30,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end align-center gap-3" id="main-nav">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="#" class="nav-link active">Services</a>
+                <a href="/" class="nav-link active">Home</a>
+                <a href="/services" class="nav-link active">Services</a>
                 <!-- <a href="#" class="nav-link active">Contact us</a> -->
-                <a href="about.html" class="nav-link active">About us</a>
+                <a href="/about" class="nav-link active">About us</a>
             </div>
         </div>
     </nav>
-    
+
 
     <!-- Section 1 -->
     <section class="container mt-5">
@@ -46,7 +46,7 @@
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/carpet cleaning.jpg" class="card-img-top" alt="Carpet Cleaning" width="50" height="auto">
+                    <img src="static/assets/services/carpet cleaning.jpg" class="card-img-top" alt="Carpet Cleaning" width="50" height="auto">
                     <div id="carpets" class="card-body">
                         <a  href="#"><h5 class="card-title">Carpet Cleaning</h5></a>
                         <p class="card-text"><span class="lead">Revitalize Your Carpets</span>
@@ -58,7 +58,7 @@
             <!-- Card 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/house cleaning.jpg" class="card-img-top" alt="House Cleaning" width="50" height="auto">
+                    <img src="static/assets/services/house cleaning.jpg" class="card-img-top" alt="House Cleaning" width="50" height="auto">
                     <div id="house" class="card-body">
                         <a href="#"><h5 class="card-title">House Cleaning</h5></a>
                         <p class="card-text"><span class="lead">Transform Your Home into a Sanctuary</span>
@@ -71,7 +71,7 @@
             <!-- Card 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/carwash.jpg" class="card-img-top" alt="Car Wash">
+                    <img src="static/assets/services/carwash.jpg" class="card-img-top" alt="Car Wash">
                     <div id="carwash" class="card-body">
                         <a href="#"><h5 class="card-title">Car Wash</h5></a>
                         <p class="card-text"><span class="lead">Shine On, Drive On</span>
@@ -90,7 +90,7 @@
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/carousel/slide3.jpg" class="card-img-top" alt="Office Cleaning">
+                    <img src="static/assets/carousel/slide3.jpg" class="card-img-top" alt="Office Cleaning">
                     <div class="card-body">
                         <h5 class="card-title display-6 fw-bold">Office Cleaning</h5>
                         <p class="card-text"><span class="lead">Elevate Your Workspace: </span>
@@ -103,7 +103,7 @@
             <!-- Card 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/window cleaning.jpg" class="card-img-top" alt="Industrial Cleaning">
+                    <img src="static/assets/services/window cleaning.jpg" class="card-img-top" alt="Industrial Cleaning">
                     <div class="card-body">
                         <h5 class="card-title">Industrial</h5>
                         <p class="card-text"><span class="lead">Maintaining Efficiency, Ensuring Safety</span>
@@ -115,7 +115,7 @@
             <!-- Card 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/institution.jpg" class="card-img-top" alt="Institution">
+                    <img src="static/assets/services/institution.jpg" class="card-img-top" alt="Institution">
                     <div class="card-body">
                         <h5 class="card-title">Institution</h5>
                         <p class="card-text"><span class="lead">Cleanliness for Learning and Healing</span>
@@ -133,7 +133,7 @@
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/deep cleaning.jpg" class="card-img-top" alt="deep Cleaning">
+                    <img src="static/assets/services/deep cleaning.jpg" class="card-img-top" alt="deep Cleaning">
                     <div class="card-body">
                         <h5 class="card-title">deep Cleaning</h5>
                         <p class="card-text"><span class="lead">Restore Freshness, Rejuvenate Your Space</span>
@@ -145,7 +145,7 @@
             <!-- Card 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/post construction.jpg" class="card-img-top" alt="Post construction">
+                    <img src="static/assets/services/post construction.jpg" class="card-img-top" alt="Post construction">
                     <div class="card-body">
                         <h5 class="card-title">Post construction</h5>
                         <p class="card-text"><span class="lead">The Final Touch on Your Project</span>
@@ -157,7 +157,7 @@
             <!-- Card 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="assets/services/moving.jpg" class="card-img-top" alt="move-in/move-out">
+                    <img src="static/assets/services/moving.jpg" class="card-img-top" alt="move-in/move-out">
                     <div class="card-body">
                         <h5 class="card-title">move-in/move-out</h5>
                         <p class="card-text"><span class="lead">Seamless Transitions, Spotless Spaces</span>
@@ -174,32 +174,32 @@
     <div class="footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-            <a href="assets/ladachi_logo.png" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1 keychainify-checked">
-                <img src="assets/ladachi_logo.png" width="30" height="24" alt="Description of your image">
+            <a href="static/assets/ladachi_logo.png" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1 keychainify-checked">
+                <img src="static/assets/ladachi_logo.png" width="30" height="24" alt="Description of your image">
             </a>
-    
+
             <span class="mb-3 mb-md-0 text-white">&copy; 2023 Lachadi cleaning services</span>
             </div>
-    
+
             <ul class="nav col-md-4 justify-content-evenly list-unstyled d-flex ">
             <li class="ms-3"><a href="#" class="fa fa-facebook text-white " width="24" height="24"></a></li>
             <li class="ms-3"><a href="#" class="fa fa-twitter text-white" width="24" height="24"></a></li>
             <li class="ms-3"><a href="#" class="fa fa-instagram text-white" width="24" height="24"></a></li>
             </ul>
-    
+
         </footer>
         </div>
         <div id="backtopbtn">
             <button id="back-to-top-btn" class="border-3 btn-outline-custom"><span id="backtotop">&#8593;</span></button>
         </div>
-    
+
       <!-- <button id="back-to-top-btn" class="border-3 btn-outline-custom"><span id="backtotop">&#8593;</span></button> -->
-      
+
 
     <!-- Add Bootstrap JS and jQuery here (if needed) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
