--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
  <nav class="navbar navbar-expand-md container-fluid">
 
     <div class="container">
-        <a href="index.html" class="navbar-brand">
-            <img src="assets/ladachi_logo.png" alt="company logo" width="100" height="auto" class="d-none d-sm-inline-block" >
+        <a href="/" class="navbar-brand">
+            <img src="static/assets/ladachi_logo.png" alt="company logo" width="100" height="auto" class="d-none d-sm-inline-block" >
             <span id="company_name" class="text-center">LACHADI CLEANING SOLUTIONS Ltd</span>
         </a>
         <!-- toggle button for mobile view -->
@@ -27,10 +27,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end align-center gap-3" id="main-nav">
-            <a href="#" class="nav-link active">Home</a>
-            <a href="services.html" class="nav-link active">Services</a>
+            <a href="/" class="nav-link active">Home</a>
+            <a href="/services" class="nav-link active">Services</a>
             <!-- <a href="#" class="nav-link active">Contact us</a> -->
-            <a href="about.html" class="nav-link active">About us</a>
+            <a href="/about" class="nav-link active">About us</a>
             <a class="nav-link dropdown-toggle justify-content-end" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Quick Links
             </a>
@@ -57,7 +57,7 @@
         </div>
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="assets/carousel/slide1.jpg" class="d-block w-100" alt="img 1">
+            <img src="static/assets/carousel/slide1.jpg" class="d-block w-100" alt="img 1">
             <div class="carousel-caption container-fluid d-sm-block d-md-block">
             <h5>Domestic cleaning</h5>
             <p>Carpet, Couch and Sofas</p>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="assets/carousel/slide2.jpg" class="d-block w-100" alt="img 2">
+            <img src="/static/assets/carousel/slide2.jpg" class="d-block w-100" alt="img 2">
             <div class="carousel-caption container-fluid d-sm-block d-md-block">
             <h5>Commercial Cleaning</h5>
             <p>Office cleaning</p>
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="assets/carousel/slide3.jpg" class="d-block w-100" alt="img 3">
+            <img src="static/assets/carousel/slide3.jpg" class="d-block w-100" alt="img 3">
             <div class="carousel-caption container-fluid d-sm-block d-md-block">
             <h5>Specialized services</h5>
             <p>Deep cleaning</p>
@@ -116,7 +116,7 @@
         <div class="whole-services container text-center ">
             <div class="row mb-3">
               <div class="col navbar-brand container-fluid ">
-                <img src="assets/carousel/slide1.jpg" width="100%" height="100%" class="img-fluid" alt="image">
+                <img src="static/assets/carousel/slide1.jpg" width="100%" height="100%" class="img-fluid" alt="image">
               </div>
               <div class="sub-whole-services col-lg-6 col-md-12 container ">
                 <div id="domestic" class="container-fluid">
@@ -129,7 +129,7 @@
             </div>
             <div class="row gap-3 mb-3">
                 <div class="col navbar-brand container-fluid">
-                  <img src="assets/carousel/slide2.jpg" width="100%" height="100%" class="img-fluid" alt="Cleaning Picture">
+                  <img src="static/assets/carousel/slide2.jpg" width="100%" height="100%" class="img-fluid" alt="Cleaning Picture">
                 </div>
                 <div class="col-lg-6 col-md-12 container">
                   <div id="commercial" class="container-fluid">
@@ -141,7 +141,7 @@
               </div>
               <div class="row gap-3 mb-3">
                 <div class="col navbar-brand container-fluid">
-                  <img src="assets/carousel/slide3.jpg" width="100%" height="100%" class="img-fluid" alt="Cleaning picture ">
+                  <img src="static/assets/carousel/slide3.jpg" width="100%" height="100%" class="img-fluid" alt="Cleaning picture ">
                 </div>
                 <div class="col-lg-6 col-md-12 container">
                   <div id="Specialized" class="container-fluid">
@@ -160,7 +160,7 @@
         </div>
         <div class="row gap-3">
             <div class="col-lg-6 col-md-12 container">
-                
+
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item show">
                         <h2 class="accordion-header" id="headingOne">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -187,7 +187,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -200,7 +200,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFour">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -213,8 +213,8 @@
                             </div>
                         </div>
                     </div>
-                
-            
+
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFive">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
@@ -227,8 +227,8 @@
                             </div>
                         </div>
                     </div>
-                
-            
+
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingSix">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
@@ -246,10 +246,10 @@
 
                 <div class="col container">
                     <div class="container-fluid">
-                        <img src="assets/carousel/cleaning man.jpeg" alt="Cleaning man" class="img-fluid" id="faqs-image">
+                        <img src="static/assets/carousel/cleaning man.jpeg" alt="Cleaning man" class="img-fluid" id="faqs-image">
                     </div>
                 </div>
-                
+
 
             </div>
 
@@ -259,7 +259,7 @@
                     <div class="row">
                         <div class="col-md-4 text-center">
                              <div class="profile">
-                             <img src="assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
+                             <img src="static/assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
                                  <blockquote>Choosing Ladachi Cleaning Services for specialized pest control was the best decision I made. Their team addressed a persistent pest issue in my property efficiently and safely. I can finally enjoy a pest-free environment. Thanks to Ladachi, I can now relax in my space without worrying about pests
                                  </blockquote>
                                  <h3>Rodney Gitonga</h3>
@@ -267,7 +267,7 @@
                         </div>
                         <div class="col-md-4 text-center">
                             <div class="profile">
-                            <img src="assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
+                            <img src="static/assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
                                 <blockquote>Ladachi Cleaning Services is a game-changer for my business. Our office space has never been this clean and inviting. Their commercial cleaning team goes above and beyond to ensure a pristine workplace. I highly recommend their services to all business owners. Ladachi is the best!
                                 </blockquote>
                                 <h3>Brian Etemesi</h3>
@@ -275,7 +275,7 @@
                        </div>
                        <div class="col-md-4 text-center">
                         <div class="profile">
-                        <img src="assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
+                        <img src="static/assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
                             <blockquote>I can't express how satisfied I am with Ladachi Cleaning Services. They transformed my home into a sparkling oasis! The attention to detail and professionalism of their team is unmatched. Now, I look forward to coming home to a clean and fresh environment every day. Thank you, Ladachi!
                             </blockquote>
                             <h3>Laura Mutua</h3>
@@ -283,7 +283,7 @@
                    </div>
                </div>
                    </div>
-        
+
             </section>
 
     </div>
@@ -293,34 +293,34 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-4 text-center">
                     <div class="profile">
-                        <img src="assets/Our clients/jjs.jpg" alt="JJ's" class="user img-fluid" width="300" height="auto">
+                        <img src="static/assets/Our clients/jjs.jpg" alt="JJ's" class="user img-fluid" width="300" height="auto">
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="profile">
-                        <img src="assets/Our clients/scu.jpg" alt="SCU" class="user img-fluid" width="300" height="auto">
+                        <img src="static/assets/Our clients/scu.jpg" alt="SCU" class="user img-fluid" width="300" height="auto">
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="profile">
-                        <img src="assets/Our clients/tumaini.jpg" alt="Tumaini" class="user img-fluid" width="300" height="auto">
+                        <img src="static/assets/Our clients/tumaini.jpg" alt="Tumaini" class="user img-fluid" width="300" height="auto">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
 
 
-    
+
+
 
   <!-- footer -->
 
     <div class="footer">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
-        <a href="assets/ladachi_logo.png" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1 keychainify-checked">
-            <img src="assets/ladachi_logo.png" width="30" height="24" alt="Description of your image">
+        <a href="static/assets/ladachi_logo.png" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1 keychainify-checked">
+            <img src="static/assets/ladachi_logo.png" width="30" height="24" alt="Description of your image">
         </a>
 
         <span class="mb-3 mb-md-0 text-white">&copy; 2023 Lachadi cleaning services</span>
@@ -341,7 +341,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 
 </body>
 </html>
