added images to the services testimonials

--- a/templates/index.html
+++ b/templates/index.html
@@ -259,26 +259,26 @@
                     <div class="row">
                         <div class="col-md-4 text-center">
                              <div class="profile">
-                             <img src="static/assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
+                             <img src="static/assets/DALL·E 2024-10-30 12.56.48 - A formal representation of pest control featuring Black professionals actively engaged in their work. The scene shows two individuals, a man and a wom.webp" alt="avatar" class="user" width="100" height="auto">
                                  <blockquote>Choosing Ladachi Cleaning Services for specialized pest control was the best decision I made. Their team addressed a persistent pest issue in my property efficiently and safely. I can finally enjoy a pest-free environment. Thanks to Ladachi, I can now relax in my space without worrying about pests
                                  </blockquote>
-                                 <h3>Rodney Gitonga</h3>
+                                 <h3>Fred Ombachi</h3>
                              </div>
                         </div>
                         <div class="col-md-4 text-center">
                             <div class="profile">
-                            <img src="static/assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
+                            <img src="static/assets/formal image of office cleaning with Black people.png" alt="avatar" class="user" width="100" height="auto">
                                 <blockquote>Ladachi Cleaning Services is a game-changer for my business. Our office space has never been this clean and inviting. Their commercial cleaning team goes above and beyond to ensure a pristine workplace. I highly recommend their services to all business owners. Ladachi is the best!
                                 </blockquote>
-                                <h3>Brian Etemesi</h3>
+                                <h3>Linus Muite</h3>
                             </div>
                        </div>
                        <div class="col-md-4 text-center">
                         <div class="profile">
-                        <img src="static/assets/avatar icon.jpg" alt="avatar" class="user" width="100" height="auto">
+                        <img src="static/assets/professional house cleaning with a black person doing the job.png" alt="avatar" class="user" width="100" height="auto">
                             <blockquote>I can't express how satisfied I am with Ladachi Cleaning Services. They transformed my home into a sparkling oasis! The attention to detail and professionalism of their team is unmatched. Now, I look forward to coming home to a clean and fresh environment every day. Thank you, Ladachi!
                             </blockquote>
-                            <h3>Laura Mutua</h3>
+                            <h3>George Wafula</h3>
                         </div>
                    </div>
                </div>
